✨ HTML table in e-mails